Fixed bugs, detected by SonarQube